# cnc-content

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  ci-local.ps1  ci-local.sh  deny.toml
.github/workflows/: audit.yml  ci.yml  release.yml  update-mirrors.yml
crates/p2p-distribute/: Cargo.toml  PLAN.md  README.md  TODO-cloud-integration.md
crates/p2p-distribute/src/: adaptive.rs  bandwidth.rs  bencode.rs  bitfield.rs  bridge.rs  bridge_peer.rs  budget.rs  cache.rs  catalog.rs  catalog_sign.rs  choking.rs  config.rs  connection.rs  content_discovery.rs  coordinator.rs  corruption_ledger.rs  credential.rs  credit.rs  demand.rs  dht.rs  endgame.rs  fast_extension.rs  gateway.rs  gateway_adapter.rs  group.rs  handshake.rs  lib.rs  local_discovery.rs  manifest.rs  merkle.rs  message.rs  metadata_exchange.rs  mirror_health.rs  network_id.rs  obfuscation.rs  peer.rs  peer_affinity.rs  peer_id.rs  peer_pool.rs  peer_stats.rs  (+28 more)
crates/workshop-core/: Cargo.toml
crates/workshop-core/src/: blob.rs  error.rs  index.rs  lib.rs  manifest.rs  resource.rs  update.rs
crates/workshop-package/: Cargo.toml
crates/workshop-package/src/: lib.rs
crates/workshop-registry/: Cargo.toml
crates/workshop-registry/src/: lib.rs
crates/workshop-resolver/: Cargo.toml
crates/workshop-resolver/src/: lib.rs
data/: downloads.toml  trackers.txt
data/torrents/: raaftermath.torrent  rabasefiles.torrent  tdgdiiso.torrent  tdnodiso.torrent
docs/: SECURITY-VULNERABILITY-RESEARCH.md
docs/magnets/: ra-4cd-set.html  ra-aftermath.html  ra-base.html  ra-cncdesert.html  ra-full-discs.html  ra-quickinstall.html  td-base.html  td-disc-isos.html
docs/torrents/: racncdesert.torrent  raquickinstall.torrent  tdbasefiles.torrent  tdcovertops.torrent
src/: actions.rs  config.rs  downloader.rs  downloads.rs  executor.rs  ffi.rs  iscab.rs  lib.rs  packages.rs  query.rs  recipes.rs  session.rs  sources.rs  streaming.rs  tests.rs  torrent.rs  torrent_create.rs  verify.rs
src/coordinator/: btswarm.rs  mod.rs  tests.rs  webseed.rs
src/coordinator/tests/: coordinator.rs  mod.rs
src/downloader/: extract.rs  mirror.rs  mirror_health.rs  mod.rs  orchestrate.rs  segmented.rs  tests.rs
src/downloader/tests/: download.rs  mod.rs  urls.rs  zip_tests.rs
src/executor/: extract.rs  mod.rs  tests.rs
src/executor/tests/: actions.rs  bag_describe.rs  big_meg.rs  iso.rs  mod.rs
src/ffi/: mod.rs  tests.rs
src/iscab/: mod.rs  tests.rs
src/iscab/tests/: errors.rs  extract.rs  limits.rs  mod.rs
src/recipes/: dune.rs  mod.rs  ra2_gen.rs  ra2td_recipes.rs  ra_base.rs  ra_movies.rs  ra_recipes.rs  ra_remastered.rs  td.rs  tests.rs  ts.rs  ts_dune_recipes.rs
src/session/: mod.rs  tests.rs
src/source/: cncnet.rs  disc.rs  gog.rs  mod.rs  openra.rs  origin.rs  registry.rs  steam.rs  vdf.rs
src/source/vdf/: mod.rs  tests.rs
src/streaming/: mod.rs  reader.rs  tests.rs
src/tests/: core.rs  downloads.rs  mod.rs  post_download.rs
src/tests/downloads/: content.rs  manifest.rs  mirrors.rs  mod.rs  seeding.rs  torrents.rs
src/verify/: bitfield.rs  incremental.rs  mod.rs  tests.rs
src/verify/tests/: bitfield.rs  hash.rs  id_and_content.rs  manifest.rs  mod.rs
