# SPDX-License-Identifier: GPL-3.0-or-later
# Copyright (c) 2025–present Iron Curtain contributors

[workspace]
members = [
    "crates/p2p-distribute",
    "crates/workshop-core",
    "crates/workshop-registry",
    "crates/workshop-resolver",
    "crates/workshop-package",
]

[package]
name = "cnc-content"
version = "0.1.0-alpha.0"
edition = "2021"
rust-version = "1.89"
description = "C&C content acquisition — download, verify, and manage Command & Conquer game content (Red Alert, Tiberian Dawn, Dune 2000)"
license = "GPL-3.0-or-later"
repository = "https://github.com/iron-curtain-engine/cnc-content"
authors = ["Iron Curtain contributors"]
keywords = [
    "red-alert",
    "command-conquer",
    "tiberian-dawn",
    "content",
    "gamedev",
]
categories = ["games", "command-line-utilities"]

[[bin]]
name = "cnc-content"
path = "src/bin/cnc_content/main.rs"
required-features = ["cli"]

[dependencies]
app-path = "1.1"
cnc-formats = { path = "../cnc-formats", default-features = false, features = [
    "encrypted-mix",
    "meg",
] }
serde = { version = "1", features = ["derive"] }
sha1 = "0.11"
blake3 = "1"
flate2 = "1"
p2p-distribute = { path = "crates/p2p-distribute" }
strict-path = "0.2.0"
thiserror = "2.0"
toml = "1.1.2"

# CLI-only deps
clap = { version = "4", features = ["derive", "env"], optional = true }
console = { version = "0.16", optional = true }
indicatif = { version = "0.18", optional = true }
mimalloc = { version = "0.1", optional = true }

# ZIP extraction (used by executor for install actions and by downloader)
zip = { version = "8.5.0", default-features = false, features = ["deflate"] }

# Download deps (also used by test provisioner)
ureq = { version = "3", optional = true }

# Parallel verification + SIMD bitfields
rayon = { version = "1.12.0", optional = true }
wide = { version = "1.3.0", optional = true }

# Torrent/P2P deps
librqbit = { version = "8", optional = true }
tokio = { version = "1.52.0", features = [
    "rt-multi-thread",
    "macros",
], optional = true }
urlencoding = { version = "2", optional = true }

[features]
default = ["cli", "download", "fast-verify"]
cli = ["dep:clap", "dep:console", "dep:indicatif", "dep:mimalloc", "download"]
download = ["dep:ureq"]
ffi = ["download"]
fast-verify = ["dep:rayon", "dep:wide", "blake3/rayon"]
torrent = ["dep:librqbit", "dep:tokio", "dep:urlencoding", "download"]

[target.'cfg(windows)'.dependencies]
winreg = "0.56"

# ── Release profile ────────────────────────────────────────────────────
#
# This binary is a CLI tool that users download and run. Optimize for:
# 1. Throughput — SHA-1/SHA-256 hashing and zlib decompression are the
#    hot paths during download/verify/extract. LTO + opt-level 3 lets
#    LLVM inline across crate boundaries (blake3, flate2, zip).
# 2. Binary size — single codegen unit + LTO + symbol stripping produce
#    a compact binary. Users may download this over slow connections.
# 3. Startup time — single codegen unit avoids cross-unit indirection.

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"

[dev-dependencies]
