# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "p2p-distribute"
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
description = "Piece-level download coordinator with web seed support, streaming reader, and torrent file creation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/iron-curtain-engine/p2p-distribute"
authors = ["David Krasnitsky <dikaveman@gmail.com>"]
keywords = ["torrent", "p2p", "streaming", "web-seed", "download"]
categories = ["network-programming"]

[dependencies]
getrandom = { version = "0.2", features = ["std"] }
sha1 = "0.11"
sha2 = "0.11.0"
thiserror = "2.0"

# HTTP web seed peer (BEP 19 — fetch pieces via Range requests)
ureq = { version = "3", optional = true }

[features]
default = ["http"]
http = ["dep:ureq"]
