# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "workshop-registry"
version = "0.1.0-alpha.0"
edition = "2021"
rust-version = "1.89"
description = "Git-based package registry index for Workshop — NDJSON, crates.io-style sharding"
license = "MIT OR Apache-2.0"
repository = "https://github.com/iron-curtain-engine/workshop-core"
authors = ["Iron Curtain contributors"]
keywords = ["workshop", "registry", "modding", "index", "gamedev"]
categories = ["games"]

[dependencies]
workshop-core = { path = "../workshop-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
